--- a/index.html
+++ b/index.html
@@ -10,17 +10,11 @@
     <meta property="og:title" content="Évoluez International - Programme Visa & Bourse" />
     <meta property="og:description" content="Programme de visa professionnel et bourse internationale pour la France, Belgique et Suisse" />
     <meta property="og:type" content="website" />
-  <meta property="og:image" content="/opengraph.png" />
+    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:site" content="@provisa_fr" />
-  <meta name="twitter:image" content="/opengraph.png" />
-
-  <!-- Favicon and touch icons -->
-  <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@lovable_dev" />
+    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
