--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
     <meta name="description" content="Obtenez votre visa professionnel et bourse internationale pour la France, Belgique ou Suisse. Accompagnement complet pour votre projet d'expatriation." />
     <meta name="author" content="Évoluez International" />
 
-    <meta property="og:title" content="Évoluez International - Programme Visa & Bourse" />
+  <meta property="og:title" content="Évoluez International - Programme Visa & Bourse" />
     <meta property="og:description" content="Programme de visa professionnel et bourse internationale pour la France, Belgique et Suisse" />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="alternate icon" href="/favicon.ico" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@lovable_dev" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
