--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
   <meta property="og:title" content="Évoluez International - Programme Visa & Bourse" />
     <meta property="og:description" content="Programme de visa professionnel et bourse internationale pour la France, Belgique et Suisse" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:site_name" content="Évoluez International" />
+    <!-- Use local image so social previews work after deploy -->
+    <meta property="og:image" content="/logo.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
 
   <!-- Favicon -->
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <link rel="alternate icon" href="/favicon.ico" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@provisa" />
+    <!-- Use local image for Twitter card too -->
+    <meta name="twitter:image" content="/logo.png" />
   </head>
 
   <body>
