--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <meta property="og:description" content="Programme de visa professionnel et bourse internationale pour la France, Belgique et Suisse" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Évoluez International" />
-    <!-- Use local image so social previews work after deploy -->
-    <meta property="og:image" content="/logo.png" />
+  <!-- Use absolute URL for og image so social crawlers always fetch the correct image -->
+  <meta property="og:image" content="https://provisa.fr/opengraph.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
 
@@ -21,8 +21,10 @@
   <link rel="alternate icon" href="/favicon.ico" />
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@provisa" />
-    <!-- Use local image for Twitter card too -->
-    <meta name="twitter:image" content="/logo.png" />
+  <!-- Use absolute URL for Twitter card image too -->
+  <meta name="twitter:image" content="https://provisa.fr/opengraph.png" />
+  <meta property="og:url" content="https://provisa.fr/" />
+  <link rel="canonical" href="https://provisa.fr/" />
   </head>
 
   <body>
